Add Openai chat completion methods + support for streaming (#34)
* openAI

* change path

* add response cleaning

* add streaming support

* add whitespace

* pretier

* biome formatting

* Fix type and improve example (#35)


* replace messari format with openAI

---------
